--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,21 @@
 .App {
   text-align: center;
 }
-
+.upperdiv{
+  display: flex;
+  flex-wrap: wrap;
+  flex: 1 0 50%;
+  background-color: #282c34;
+  color: white;
+}
+.chart{
+    display: flex;
+    flex: 1 0 50%  ;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    padding-top: 100px;
+}
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
